# File-encryption-tool

./: .gitignore  CMakeLists.txt  README.md  crypto_core.cpp  crypto_core.h  gui_main.cpp  img_crypt.cpp  img_crypt.h  main.cpp  txt_crypt.cpp  txt_crypt.h  utils.cpp  utils.h
